css/links.css
.content {
    width: 100%;
}
.link-container {
    margin: 0 2% 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 96%;
  }
  .link-column {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items:center;
    justify-content: center;
    width: 100%;
  }
  .link-column p{
    display: flex;
    color: rgb(225, 225, 225);
    text-align: center;
    font-style: italic;
    text-decoration: underline;
    margin: 0px;
    font-size: 18px;
  }
  .link-column ps{
    display: flex;
    color: rgb(200, 200, 200);
    font-family: "BAHNSCHRIFT";
    text-align: center;
    font-style: italic;
    margin-top: 0px;
    margin-bottom: 30px;
    font-size: 13px;
  }
  .link-column ps a{
    color: rgb(133, 167, 203);
    font-size: 13px;
  }
  
  .link-column p a{
    display: flex;
    color: rgb(157, 204, 255);
    text-align: center;
    font-style: italic;
    text-decoration: underline;
    margin: 0px;
    margin-bottom: 20px;
    font-size: 18px;
  }
  .link-element {
    width: 100%;
    max-width: 800px;
  }
  .link-element a {
    margin: 15px;
    height: 80px;
    background-color: #dbdbdb;
    border-width: 2px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-color: #5a5a5a;
    border-radius: 10px;
    border-style: solid;
    position: relative;
    transition:box-shadow 0.3s ease-in-out;
    flex-direction: row;
  }
  hand {
    margin-left: 10px;
    font-family: "ROBOTO";
    font-weight: bold;
    font-style: normal;
    font-size: 15px;
    color: rgb(28, 28, 28);
    text-decoration : none;
  }
  .link-element a img {
    width: 125px;
    height: 40px;
    display: flex;
    margin-left: 15px;
    float: left;
  }
  .link-element a imgh {
    width: 125px;
    height: 40px;
    display: flex;
    float: left;
    align-items: center;
  }
  .twit-link {
    width: 40px;
    height: 40px;
    display: flex;
    margin-left: 0px;
    float: left;
  }
  .twit-link img{
    width: 50px;
    height: 40px;
    margin: 0px;
    padding: 0px;
  }
  .link-element a span {
    float: right;
  }
  .link-button {
    display: block;
    padding: 3px 6px;
    margin-right: 15px;
    height: auto;
    width: auto;
    max-height: 60px;
    background-color: rgb(201, 201, 201);
    text-align: center;
    font-size: 20px;
    font-family: "BAHNSCHRIFT";
    font-weight: normal;
    font-style: normal;
    transition: 0.3s;
    border-radius: 5px;
    color: rgb(73, 73, 73);
  }
  .dsp-button-pre {
    display: block;
    align-items: right;
    padding: 3px 5px;
    margin-right: 10px;
    margin-left: 65px;
    height: auto;
    width: auto;
    max-height: 60px;
    background-color: rgb(201, 201, 201);
    text-align: center;
    font-size: 18px;
    font-family: "BAHNSCHRIFT";
    font-weight: normal;
    font-style: normal;
    transition: 0.3s;
    border-radius: 5px;
    float: right;
    color: rgb(73, 73, 73);
  }
  
.link-element a:hover {
    box-shadow: transparent;
    box-shadow: 0 7px 7px rgba(43, 43, 43, 0.4);
  }
  
  .link-button:hover {
    background-color: #181818;
    color: whitesmoke;
  }
  .link-button-pre:hover {
    background-color: #181818;
    color: whitesmoke;
  }
  
  /* text */

.heading-lnk {
  font-size: 30px;
  padding: 10px 0px;
  font-family: "MARKPRO-BOLD";
  color: var(--color-primary);
  text-shadow: 1px 1px 10px var(--shadow-primary), -1px -1px 10px var(--shadow-primary);
  text-align: center;
}

.heading-lnk h3 {
  font-size: 30px;
  padding: 0px;
  margin-block-start: 15px;
  margin-block-end: 5px;
}

.heading-lnk h1 {
  font-size: 40px;
  padding: 10px;
  font-family: "MARKPRO-BOLD";
  color: var(--color-primary);
  text-shadow: 1px 1px 10px var(--shadow-primary), -1px -1px 10px var(--shadow-primary);
  text-align: center;
}
.heading-lnk p {
  font-size: 20px;
  font-family: "BAHNSCHRIFT";
  color: var(--color-primary);
  text-shadow: 1px 1px 10px var(--shadow-primary), -1px -1px 10px var(--shadow-primary);
  text-align: center;
}

@font-face {
    font-family: "ROBOTO";
    src: url("fonts/ROBOTO-REGULAR.woff") format("woff"),
    url("/fonts/ROBOTO-REGULAR.woff") format("woff");
    font-weight: normal;
    font-style: normal;
  }

  @font-face {
    font-family: "ROBOTO";
    src: url("fonts/ROBOTO-BOLD.woff") format("woff"),
    url("/fonts/ROBOTO-BOLD.woff") format("woff");
    font-weight: bold;
    font-style: normal;
  }

